--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <h2>Jacky Lin</h2>
             <p>I'm <span class="typed" data-typed-items="Physicist,Biologist, Radiation Oncologist, Developer, Badminton Player, Football Referee">Physicist</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="https://x.com/JackieeeLin"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61550114420648"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/jacky_lin_929/"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/jacky-lin-093b57287/"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -729,11 +729,10 @@
       <h3 class="sitename">Jacky Lin</h3>
       <p>I'm the creative oustanding thinker and innovator</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/JackieeeLin"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61550114420648"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/jacky_lin_929/"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/jacky-lin-093b57287/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
