Open the website

--- a/index.html
+++ b/index.html
@@ -729,10 +729,10 @@
       <h3 class="sitename">Jacky Lin</h3>
       <p>I'm the creative oustanding thinker and innovator</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://x.com/JackieeeLin"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=61550114420648"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/jacky_lin_929/"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/jacky-lin-093b57287/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/JackieeeLin" target="blank"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61550114420648" target="blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/jacky_lin_929/" target="blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/jacky-lin-093b57287/" target="blank"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
