--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
+  
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -62,10 +62,10 @@
             <h2>Jacky Lin</h2>
             <p>I'm <span class="typed" data-typed-items="Physicist,Biologist, Radiation Oncologist, Developer, Badminton Player, Football Referee">Physicist</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="https://x.com/JackieeeLin"><i class="bi bi-twitter-x"></i></a>
-              <a href="https://www.facebook.com/profile.php?id=61550114420648"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/jacky_lin_929/"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/jacky-lin-093b57287/"><i class="bi bi-linkedin"></i></a>
+              <a href="https://x.com/JackieeeLin" target="_blank"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61550114420648" target="_blank"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/jacky_lin_929/" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/jacky-lin-093b57287/" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -730,10 +730,10 @@
       <h3 class="sitename">Jacky Lin</h3>
       <p>I'm the creative oustanding thinker and innovator</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://x.com/JackieeeLin" target="blank"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=61550114420648" target="blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/jacky_lin_929/" target="blank"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/jacky-lin-093b57287/" target="blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/JackieeeLin" target="_blank"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61550114420648" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/jacky_lin_929/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/jacky-lin-093b57287/" target="_blank"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
